# dAIly

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
.planning/: HANDOFF.json  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
.planning/debug/: chat-edit-loop-and-action-log.md  fix-google-credentials-reconstruction.md  knowledge-base.md  test7-chat-openai-traceback.md  tts-barge-in-inconsistent.md
.planning/debug/resolved/: fix-email-reading-sender-and-context.md  (+1 more)
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-MILESTONE-AUDIT.md  v1.2-REQUIREMENTS.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md  voice-architecture-research.md  voice-strategy-decision.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  003_add_user_profile_signal_log.py  004_action_log.py  005_add_memory_facts.py  006_add_user_profile_email.py  56a7489e1608_add_briefing_config_vip_senders.py
scripts/: backfill_ranker_scores.py  entrypoint.sh
src/daily/: cli.py  config.py  logging_config.py  main.py
tests/: conftest.py  test_action_approval.py  test_action_draft.py  test_action_executor.py  test_action_executors.py  test_action_log.py  test_adaptive_ranker.py  test_briefing_cache.py  test_briefing_context.py  test_briefing_models.py  test_briefing_narrator.py  test_briefing_pipeline.py  test_briefing_ranker 2.py  test_briefing_ranker.py  test_briefing_redactor.py  test_briefing_scheduler.py  test_capture_signal.py  test_cli_approval.py  test_cli_chat.py  test_conversational_flow.py  test_google_adapter.py  test_google_oauth.py  test_health_endpoint.py  test_logging_config.py  test_main_lifespan.py  test_memory.py  test_metrics_endpoint.py  test_microsoft_adapter.py  test_microsoft_oauth.py  test_models.py  test_narrator_preferences.py  test_orchestrator_graph.py  test_orchestrator_nodes.py  test_orchestrator_thread.py  test_profile_cli.py  test_profile_service.py  test_schema.py  test_signal_log.py  test_slack_adapter.py  test_slack_oauth.py  (+9 more)
(+263 files in other folders)
