[project]
name = "daily"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.49",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "python-dotenv>=1.0.0",
    "typer>=0.24.0",
    "cryptography>=42.0.0",
    "google-auth-oauthlib>=1.3.0",
    "google-api-python-client>=2.100.0",
    "slack-sdk>=3.41.0",
    "msal>=1.35.0",
    "msgraph-sdk>=1.55.0",
]

[project.scripts]
daily = "daily.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/daily"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
